--- a/ArjunaJTS/integration/pom.xml
+++ b/ArjunaJTS/integration/pom.xml
@@ -34,23 +34,6 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <doCheck>false</doCheck>
-          <doUpdate>false</doUpdate>
-          <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
@@ -152,4 +135,30 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+        <id>release</id>
+        <build>
+          <plugins>
+	      <plugin>
+        	<groupId>org.codehaus.mojo</groupId>
+	        <artifactId>buildnumber-maven-plugin</artifactId>
+        	<executions>
+	          <execution>
+        	    <phase>validate</phase>
+        	    <goals>
+        	      <goal>create</goal>
+        	    </goals>
+        	  </execution>
+        	</executions>
+        	<configuration>
+        	  <doCheck>false</doCheck>
+        	  <doUpdate>false</doUpdate>
+        	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+        	</configuration>
+	      </plugin>
+            </plugins>
+        </build>
+    </profile>
+  </profiles>
 </project>
