--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -111,7 +111,7 @@
       <artifactId>orson</artifactId>
       <version>0.5.0</version>
       <scope>system</scope>
-      <systemPath>${orson.jar.location}</systemPath>
+      <systemPath>${orson.jar.location}/orson-0.5.0.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>jfree</groupId>
