--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.9</version>
+          <version>2.12.4</version>
             <configuration>
               <forkMode>pertest</forkMode>
               <workingDirectory>target/test-classes</workingDirectory>
@@ -549,6 +549,35 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.2.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.2.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.jettison</groupId>
+                <artifactId>jettison</artifactId>
+                <version>1.3.1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-6.0</artifactId>
+                <version> 3.0.1.Final</version>
+                <type>pom</type>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.jboss.arquillian.testenricher</groupId>
                 <artifactId>arquillian-testenricher-initialcontext</artifactId>
                 <version>${version.org.jboss.arquillian.core}</version>
@@ -603,7 +632,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
+            <version>${version.junit}</version>
         </dependency>
         <dependency>
             <groupId>emma</groupId>
@@ -643,7 +672,7 @@
         <dependency>
             <groupId>org.jboss.logmanager</groupId>
             <artifactId>jboss-logmanager</artifactId>
-            <version>1.2.2.GA</version>
+            <version>1.4.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss</groupId>
@@ -1047,6 +1076,7 @@
     <jboss-as.version>8.0.0.Alpha1-SNAPSHOT</jboss-as.version>
     <version.org.jboss.arquillian.core>1.0.0.Final</version.org.jboss.arquillian.core>
     <version.org.jboss.arquillian.osgi>1.0.2.Final</version.org.jboss.arquillian.osgi>
+    <version.junit>4.10</version.junit>
   </properties>
   <profiles>
     <profile>
