--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -25,28 +25,13 @@
     <packaging>jar</packaging>
     <properties>
         <version.plugin.antrun>1.7</version.plugin.antrun>
-        <version.jbossas>7.1.1.Final</version.jbossas>
-        <version.jbossts>4.16.4.Final-SNAPSHOT</version.jbossts>
-        <version.junit>4.8.2</version.junit>
-        <version.byteman>2.0.1</version.byteman>
-        <version.apache.httpcomponents>4.1.2</version.apache.httpcomponents>
         <byteman.home>${project.build.directory}/byteman</byteman.home>
-        <ipv4.server.jvm.args></ipv4.server.jvm.args>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
         <byteman.server.jvm.args>
             -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
             -Djboss.modules.system.pkgs=org.jboss.byteman
             -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
         </byteman.server.jvm.args>
-        <byteman.server.ipv6.jvm.args>
-            -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
-            -Djboss.modules.system.pkgs=org.jboss.byteman
-<!--
-            -javaagent:${byteman.home}/byteman.jar=address:0:0:0:0:0:0:0:1,port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
--->
-            -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
-        </byteman.server.ipv6.jvm.args>
-        <jpda.server.jvm.args/>
     </properties>
     <build>
         <plugins>
@@ -73,12 +58,10 @@
                                 <artifactItem>
                                     <groupId>org.jboss.byteman</groupId>
                                     <artifactId>byteman</artifactId>
-                                    <version>${version.byteman}</version>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jboss.byteman</groupId>
                                     <artifactId>byteman-dtest</artifactId>
-                                    <version>${version.byteman}</version>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>${byteman.home}</outputDirectory>
@@ -88,16 +71,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -202,7 +176,6 @@
             <!-- JCA API -->
             <groupId>org.jboss.ironjacamar</groupId>
             <artifactId>ironjacamar-spec-api</artifactId>
-            <version>1.0.0.Beta5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -226,7 +199,6 @@
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -240,18 +212,9 @@
             <scope>provided</scope>
         </dependency>
 
-       <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-6.0</artifactId>
-            <version>1.0.0.Final</version>
-            <type>pom</type>
-            <scope>provided</scope>
-        </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
 
@@ -262,37 +225,39 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.spec</groupId>
+            <artifactId>jboss-javaee-6.0</artifactId>
+            <type>pom</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.byteman</groupId>
             <artifactId>byteman</artifactId>
-            <version>${version.byteman}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.byteman</groupId>
             <artifactId>byteman-dtest</artifactId>
-            <version>${version.byteman}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${version.apache.httpcomponents}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>${version.apache.httpcomponents}</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
-            <version>1.3.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -307,7 +272,6 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.11</version>
 						<configuration>
 							<!-- Prevent test and server output appearing in console. -->
 							<redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -319,7 +283,7 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv4.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${byteman.server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
 								<node.address>localhost</node.address>
 							</systemPropertyVariables>
@@ -350,12 +314,21 @@
 				<dependency>
 					<groupId>org.jboss.as</groupId>
 					<artifactId>jboss-as-arquillian-container-managed</artifactId>
-					<version>${version.jbossas}</version>
-<!-- TODO harmonise versions
 					<version>${jboss-as.version}</version>
--->
 					<scope>test</scope>
-				</dependency>
+                        <!-- exclude logmanager because an incompatible version is pulled in -->
+                        <exclusions>
+                            <exclusion>
+                                <artifactId>org.jboss.logmanager</artifactId>
+                                <groupId>jboss-logmanager</groupId>
+                            </exclusion>
+                        </exclusions>
+               	    </dependency>
+                    <dependency>
+                        <groupId>org.jboss.logmanager</groupId>
+                        <artifactId>jboss-logmanager</artifactId>
+                        <scope>provided</scope>
+                    </dependency>
 			</dependencies>
 		</profile>
 		<profile>
@@ -367,7 +340,6 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.11</version>
 						<configuration>
 							<CLI_IPV6_OPTS>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</CLI_IPV6_OPTS> 
 							<!-- Prevent test and server output appearing in console. -->
@@ -380,7 +352,7 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${byteman.server.ipv6.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${byteman.server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
 								<node.address>[::1]</node.address>
 							</systemPropertyVariables>
@@ -426,7 +398,6 @@
 				<dependency>
 					<groupId>org.jboss.logmanager</groupId>
 					<artifactId>jboss-logmanager</artifactId>
-					<version>1.3.1.Final</version>
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
