--- a/blacktie/wildfly-blacktie/subsystem/pom.xml
+++ b/blacktie/wildfly-blacktie/subsystem/pom.xml
@@ -55,6 +55,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.narayana.rts</groupId>
+            <artifactId>restat-bridge</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
