--- a/common/pom.xml
+++ b/common/pom.xml
@@ -64,11 +64,13 @@
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman</artifactId>
       <version>${version.org.jboss.byteman}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman-submit</artifactId>
       <version>${version.org.jboss.byteman}</version>
+      <scope>test</scope>
     </dependency>
     <!-- START TEST -->
     <dependency>
