--- a/pom.xml
+++ b/pom.xml
@@ -450,7 +450,7 @@
     <version.org.codehaus.jettison>1.3.4</version.org.codehaus.jettison>
     <version.junit>4.11</version.junit>
     <version.org.jboss.byteman>2.1.3</version.org.jboss.byteman>
-    <version.org.jboss.arquillian.core>1.0.3.Final</version.org.jboss.arquillian.core>
+    <version.org.jboss.arquillian.core>1.1.2.Final-wildfly-1</version.org.jboss.arquillian.core>
     <version.org.jboss.jboss-transaction-spi>7.1.0.Final</version.org.jboss.jboss-transaction-spi>
 
     <!-- qa testsuite with hornetq store -->
