JBTM-1339 JBTM-2423 New profile to use openjdk-orb

--- a/ArjunaJTS/idl/pom.xml
+++ b/ArjunaJTS/idl/pom.xml
@@ -69,6 +69,17 @@
       </modules>
     </profile>
     <profile>
+      <id>jts-openjdk</id>
+      <activation>
+        <property>
+          <name>!openjdk-disabled</name>
+        </property>
+      </activation>
+      <modules>
+        <module>idlj</module>
+      </modules>
+    </profile>
+    <profile>
       <id>jts-ibmorb</id>
       <activation>
         <property>
