--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -23,6 +23,11 @@
   <name>Narayana: ArjunaJTS orbportability</name>
   <description>orb portability harness</description>
   <packaging>jar</packaging>
+  <properties>
+    <openjdk-orb.jar>${project.build.directory}/openjdk-orb-8.0.2.Final.jar</openjdk-orb.jar>
+    <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
+  </properties>
+
   <build>
     <sourceDirectory>classes</sourceDirectory>
     <resources>
@@ -217,7 +222,6 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <exclude>**/PrePostTestCallback.java</exclude>
                     <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
@@ -311,7 +315,6 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <exclude>**/PrePostTestCallback.java</exclude>
                     <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
@@ -336,6 +339,132 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>jts-openjdk</id>
+      <activation>
+        <property>
+          <name>!openjdk-disabled</name>
+        </property>
+      </activation>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl</artifactId>
+          <version>${project.version}</version>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <excludes>
+                    <exclude>**/jacorb/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <testExcludes>
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </testExcludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>surefire-idlj</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <argLine>${idlj.boot.args}</argLine>
+                  <skip>false</skip>
+                  <systemProperties combine.children="append" />
+                  <excludes>
+                    <!-- exclude tests which we don't want to run -->
+                    <exclude>**/common/**</exclude>
+                    <exclude>**/initialisation/postinit/**</exclude>
+                    <exclude>**/initialisation/postset/**</exclude>
+                    <exclude>**/initialisation/preinit/**</exclude>
+                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
+                    <exclude>**/SimpleObjectImpl.java</exclude>
+                    <exclude>**/TestAttributeCallback.java</exclude>
+                    <!-- these ones need fixing -->
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </excludes>
+                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
+                  </classpathDependencyExcludes>
+                  <systemPropertyVariables
+                          combine.children="append">
+                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
+                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
+                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
+                  </systemPropertyVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.0</version>
+            <executions>
+              <execution>
+                <id>copy</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.openjdk-orb</groupId>
+                      <artifactId>openjdk-orb</artifactId>
+                      <version>8.0.2.Final</version>
+                      <outputDirectory>${project.build.directory}</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
     <profile>
       <id>jts-ibmorb</id>
       <activation>
@@ -411,7 +540,6 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <exclude>**/PrePostTestCallback.java</exclude>
                     <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
