--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -36,21 +36,32 @@
         <directory>src/test/resources</directory>
       </testResource>
     </testResources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/utils/plugins/**</exclude>
-            <exclude>**/DBPlugin.java</exclude>
-            <exclude>**/*JNDISetup.java</exclude>
-            <exclude>**/*SimpleJdbcTest.java</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration >
+            <argLine>${surefireArgLine}</argLine>
+            <forkMode>pertest</forkMode>
+            <workingDirectory>target/test-classes</workingDirectory>
+            <runOrder>alphabetical</runOrder>
+            <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
+            <inherited>true</inherited>
+            <excludes >
+              <exclude>**/RecoveryTest.java</exclude>
+              <exclude>**/utils/plugins/**</exclude>
+              <exclude>**/DBPlugin.java</exclude>
+              <exclude>**/*JNDISetup.java</exclude>
+              <exclude>**/*SimpleJdbcTest.java</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
   </build>
+
   <dependencies>
     <dependency>
       <groupId>com.h2database</groupId>
@@ -152,10 +163,10 @@
       </build>
     </profile>
     <profile>
-      <id>jts-ibmorb</id>
+      <id>not-ibmorb</id>
       <activation>
         <property>
-          <name>!ibmorb-disabled</name>
+          <name>!ibmorb-enabled</name>
         </property>
       </activation>
       <build>
@@ -165,15 +176,52 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <executions>
               <execution>
-                <id>surefire-ibmorb</id>
+                <id>surefire-not-ibmorb</id>
                 <phase>test</phase>
                 <goals>
                   <goal>test</goal>
                 </goals>
-                <configuration>
+                <configuration >
+                  <excludes>
+                    <exclude>**/utils/plugins/**</exclude>
+                    <exclude>**/DBPlugin.java</exclude>
+                    <exclude>**/*JNDISetup.java</exclude>
+                    <exclude>**/*SimpleJdbcTest.java</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>ibmorb</id>
+      <activation>
+        <property>
+          <name>ibmorb-enabled</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>surefire-not-ibmorb</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration >
                   <skip>false</skip>
                   <excludes>
                     <exclude>**/RecoveryTest.java</exclude>
+                    <exclude>**/utils/plugins/**</exclude>
+                    <exclude>**/DBPlugin.java</exclude>
+                    <exclude>**/*JNDISetup.java</exclude>
+                    <exclude>**/*SimpleJdbcTest.java</exclude>
                   </excludes>
                 </configuration>
               </execution>
